# openapi.json
@@ -51,20 +51,8 @@
                   "items": {
                     "type": "object",
                     "properties": {
-                      "objectID": {
+                      "ref": {
                         "type": "string"
-                      },
-                      "name": {
-                        "type": "string"
-                      },
-                      "url": {
-                        "type": "string"
-                      },
-                      "tagIds": {
-                        "type": "array",
-                        "items": {
-                          "type": "string"
-                        }
                       },
                       "source": {
                         "type": "string",
@@ -73,25 +61,29 @@
                           "igdb"
                         ]
                       },
-                      "igdbId": {
-                        "type": "number"
-                      },
-                      "coverImage": {
+                      "name": {
                         "type": "string"
                       },
                       "slug": {
                         "type": "string",
                         "nullable": true
                       },
+                      "coverImage": {
+                        "type": "string",
+                        "nullable": true
+                      },
                       "releaseYear": {
-                        "type": "number"
+                        "type": "number",
+                        "nullable": true
                       }
                     },
                     "required": [
-                      "objectID",
+                      "ref",
+                      "source",
                       "name",
-                      "url",
-                      "source"
+                      "slug",
+                      "coverImage",
+                      "releaseYear"
                     ]
                   }
                 }
@@ -114,79 +106,6 @@
               "application/json": {
                 "schema": {
                   "$ref": "#/components/schemas/error.NOT_FOUND"
-                }
-              }
-            }
-          },
-          "500": {
-            "description": "Internal server error",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/error.INTERNAL_SERVER_ERROR"
-                }
-              }
-            }
-          }
-        }
-      }
-    },
-    "/games/from-igdb": {
-      "post": {
-        "operationId": "game-getOrCreateFromIGDB",
-        "tags": [
-          "games"
-        ],
-        "requestBody": {
-          "required": true,
-          "content": {
-            "application/json": {
-              "schema": {
-                "type": "object",
-                "properties": {
-                  "igdbId": {
-                    "type": "integer",
-                    "minimum": 0,
-                    "exclusiveMinimum": true
-                  }
-                },
-                "required": [
-                  "igdbId"
-                ]
-              }
-            }
-          }
-        },
-        "responses": {
-          "200": {
-            "description": "Successful response",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "type": "object",
-                  "properties": {
-                    "id": {
-                      "type": "string"
-                    },
-                    "slug": {
-                      "type": "string",
-                      "nullable": true
-                    }
-                  },
-                  "required": [
-                    "id",
-                    "slug"
-                  ]
-                }
-              }
-            }
-          },
-          "400": {
-            "description": "Invalid input data",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/error.BAD_REQUEST"
                 }
               }
             }
@@ -229,12 +148,6 @@
                   "type": "object",
                   "properties": {
                     "headerImage": {
-                      "type": "string"
-                    },
-                    "capsuleImage": {
-                      "type": "string"
-                    },
-                    "capsuleImagev5": {
                       "type": "string"
                     }
                   },
@@ -510,15 +423,16 @@
                             "type": "string",
                             "nullable": true
                           },
-                          "source": {
+                          "name": {
                             "type": "string",
-                            "enum": [
-                              "steam",
-                              "igdb"
-                            ]
+                            "nullable": true
                           },
-                          "details": {
+                          "headerImage": {
                             "type": "string",
+                            "nullable": true
+                          },
+                          "releaseYear": {
+                            "type": "number",
                             "nullable": true
                           },
                           "performanceRating": {
@@ -536,8 +450,9 @@
                         "required": [
                           "id",
                           "slug",
-                          "source",
-                          "details",
+                          "name",
+                          "headerImage",
+                          "releaseYear",
                           "performanceRating"
                         ]
                       }
@@ -624,15 +539,78 @@
                           "type": "string",
                           "nullable": true
                         },
-                        "source": {
+                        "name": {
                           "type": "string"
                         },
-                        "igdbId": {
+                        "headerImage": {
+                          "type": "string",
+                          "nullable": true
+                        },
+                        "descriptionHtml": {
+                          "type": "string",
+                          "nullable": true
+                        },
+                        "website": {
+                          "type": "string",
+                          "nullable": true
+                        },
+                        "releaseDate": {
+                          "type": "string",
+                          "nullable": true
+                        },
+                        "releaseYear": {
                           "type": "number",
                           "nullable": true
                         },
-                        "details": {
-                          "type": "string"
+                        "developers": {
+                          "type": "array",
+                          "nullable": true,
+                          "items": {
+                            "type": "string"
+                          }
+                        },
+                        "publishers": {
+                          "type": "array",
+                          "nullable": true,
+                          "items": {
+                            "type": "string"
+                          }
+                        },
+                        "genres": {
+                          "type": "array",
+                          "nullable": true,
+                          "items": {
+                            "type": "string"
+                          }
+                        },
+                        "screenshots": {
+                          "type": "array",
+                          "nullable": true,
+                          "items": {
+                            "type": "string"
+                          }
+                        },
+                        "sourceLinks": {
+                          "type": "array",
+                          "items": {
+                            "type": "object",
+                            "properties": {
+                              "source": {
+                                "type": "string",
+                                "enum": [
+                                  "steam",
+                                  "igdb"
+                                ]
+                              },
+                              "externalId": {
+                                "type": "string"
+                              }
+                            },
+                            "required": [
+                              "source",
+                              "externalId"
+                            ]
+                          }
                         },
                         "createdAt": {
                           "type": "string"
@@ -658,7 +636,23 @@
                         }
                       },
                       "required": [
-                        "details"
+                        "id",
+                        "slug",
+                        "name",
+                        "headerImage",
+                        "descriptionHtml",
+                        "website",
+                        "releaseDate",
+                        "releaseYear",
+                        "developers",
+                        "publishers",
+                        "genres",
+                        "screenshots",
+                        "sourceLinks",
+                        "createdAt",
+                        "updatedAt",
+                        "aggregatedPerformance",
+                        "reviewCount"
                       ]
                     },
                     "reviews": {
@@ -1235,7 +1229,15 @@
                           "updatedAt"
                         ]
                       },
-                      "gameDetails": {
+                      "gameName": {
+                        "type": "string",
+                        "nullable": true
+                      },
+                      "gameSlug": {
+                        "type": "string",
+                        "nullable": true
+                      },
+                      "gameHeaderImage": {
                         "type": "string",
                         "nullable": true
                       }
@@ -1259,7 +1261,9 @@
                       "createdAt",
                       "updatedAt",
                       "macConfig",
-                      "gameDetails"
+                      "gameName",
+                      "gameSlug",
+                      "gameHeaderImage"
                     ]
                   }
                 }
@@ -2226,9 +2230,14 @@
                             "type": "string"
                           },
                           "gameName": {
-                            "type": "string"
+                            "type": "string",
+                            "nullable": true
                           },
-                          "gameDetails": {
+                          "gameSlug": {
+                            "type": "string",
+                            "nullable": true
+                          },
+                          "gameHeaderImage": {
                             "type": "string",
                             "nullable": true
                           },
@@ -2329,7 +2338,9 @@
                         "required": [
                           "id",
                           "gameId",
-                          "gameDetails",
+                          "gameName",
+                          "gameSlug",
+                          "gameHeaderImage",
                           "playMethod",
                           "softwareVersion",
                           "translationLayer",
